Revision history for Verilator

The contributors that suggested a given feature are shown in [].  [by ...]
indicates the contributor was also the author of the fix; Thanks!

* Verilator 3.861 devel

***   Using command line -Wno-{WARNING} now overrides file-local lint_on.

***   Support SV 2012 package import before port list.

****  Change SYMRSVDWORD to print as warning rather than error.

****  Fix shift corner-cases, bug765, bug766, bug768, bug772, bug776. [Clifford Wolf]

****  Fix C compiler interpreting signing, bug773. [Clifford Wolf]

****  Fix gate primitives with arrays and non-arrayed pins.

****  Fix ENDLABEL warnings on escaped identifiers.


* Verilator 3.860 2014-05-11

**    PSL is no longer supported, please use System Verilog assertions.

**    Support '{} assignment pattern on arrays, bug355.

**    Support streaming operators, bug649. [Glen Gibb]

**    Fix expression problems with -Wno-WIDTH, bug729, bug736, bug737, bug759.
      Where WIDTH warnings were ignored this might result in different
      warning messages and results, though it should better match the spec.
      [Clifford Wolf]

***   Add --no-trace-params.

***   Add assertions on 'unique if', bug725. [Jeff Bush]

***   Add PINCONNECTEMPTY warning. [Holger Waechtler]

***   Support parameter arrays, bug683. [Jeremy Bennett]

***   Fix begin_keywords "1800+VAMS", msg1211.

****  Documentation fixes, bug723. [Glen Gibb]

****  Support {} in always sensitivity lists, bug745. [Igor Lesik]

****  Fix tracing of package variables and real arrays.

****  Fix tracing of packed arrays without --trace-structs, bug742. [Jie Xu]

****  Fix missing coverage line on else-if, bug727. [Sharad Bagri]

****  Fix modport function import not-found error.

****  Fix power operator calculation, bug730, bug735. [Clifford Wolf]

****  Fix reporting struct members as reserved words, bug741. [Chris Randall]

****  Fix change detection error on unions, bug758. [Jie Xu]
